WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41711
[GTK] Scrollbars sometimes go dead and stop scrolling the view
https://bugs.webkit.org/show_bug.cgi?id=41711
Summary
[GTK] Scrollbars sometimes go dead and stop scrolling the view
Gustavo Noronha (kov)
Reported
2010-07-06 12:23:48 PDT
Sometimes when you go back the scrollbars stop acting on the view. They are there, their thumb is the correct size, but moving it does nothing. I could not find a way to reproduce this consistently yet.
Attachments
proposed fix
(2.76 KB, patch)
2010-07-06 12:54 PDT
,
Gustavo Noronha (kov)
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2010-07-06 12:54:14 PDT
Created
attachment 60653
[details]
proposed fix
Xan Lopez
Comment 2
2010-07-06 13:38:04 PDT
Comment on
attachment 60653
[details]
proposed fix r=me
Gustavo Noronha (kov)
Comment 3
2010-07-06 15:32:45 PDT
Landed as
r62598
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug